Gutenboarding: Fix "Choose a domain I own" layout on mobile (#49249)
* Initial commit

* Update HTML semantics

* Update flexbox alignment

* Update the padding for the ArrowButton component

* Update vertical alignment on desktop

* Update packages/domain-picker/src/domain-picker/style.scss

Be more explicit when it comes to `flexbox`.


* Update button + chevron alignment

* Update ArrowButton alignment

* Refactor use-a-domain-I-own semantics

The current semantics was a bit hacky and unaligned with the other domain suggestions, which are wrapped in a (surprise, surprice) wrapper component. To wrap our component, the wrapper is abstracted from the suggestion-item and moved to a seperate file.

* Remove unused ref

--- a/packages/domain-picker/src/domain-picker/style.scss
+++ b/packages/domain-picker/src/domain-picker/style.scss
@@ -109,6 +109,17 @@ $accent-blue: #117ac9;
 		}
 	}
 
+	&.type-link {
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+
+		@include break-medium {
+			flex-direction: row;
+			align-items: center;
+		}
+	}
+
 	&.placeholder {
 		cursor: default;
 	}
