--- a/packages/onboarding/src/action-buttons/style.scss
+++ b/packages/onboarding/src/action-buttons/style.scss
@@ -87,14 +87,24 @@ button.action_buttons__button.components-button {
 	}
 
 	&.action-buttons__arrow {
+		justify-content: flex-start;
+
 		text-decoration: underline;
 		// stylelint-disable-next-line scales/font-weight
 		font-weight: 500;
 		color: var( --mainColor );
 
+		// @TODO: We have to revisit the ArrowButton's padding when we pick up #48568 (https://github.com/Automattic/wp-calypso/issues/48568)
+		padding: 0;
+		margin-right: 0;
+
+		@include break-medium {
+			justify-content: flex-end;
+		}
+
 		svg {
-			// the svg has 5 empty pixels on the left
-			margin-left: -5px;
+			// The viewbox has a 5px margin and we have to crop it to align it with the ArrowButton's copy properly.
+			margin: 0 -5px -4px;
 		}
 	}
 
